# Image-Puzzle

./: .gitignore  README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  OpenCLDriver.c  native-lib.cpp
app/src/main/java/com/example/finalproject/: CameraActivity.java  CameraPreview.java  MainActivity.java  MyApplication.java
app/src/main/res/layout/: activity_camera.xml  activity_main.xml
app/src/main/res/xml/: file_paths.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
